--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  image_picker: ^0.6.7+4
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
