--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.6.7+4
+  datetime_picker_formfield: ^2.0.0
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
