--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,15 @@ dependencies:
     sdk: flutter
   image_picker: ^0.6.7+4
   datetime_picker_formfield: ^2.0.0
+  shared_preferences: ^2.0.13
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
 
 flutter_native_splash:
   color: "ffffff"
-  image: assets/images/logo.png
+  image: assets/images/shape.png
   android: true
   ios: true
 
