--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   datetime_picker_formfield: ^2.0.0
   shared_preferences: ^2.0.13
   path_provider: ^2.0.9
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.6.2+1
+  firebase: ^8.0.0
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
