--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.11
+  cloud_firestore: ^3.1.10
+  firebase_database: ^9.0.8
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
