--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^3.3.11
   cloud_firestore: ^3.1.10
   firebase_database: ^9.0.8
+  image_picker: ^0.7.2
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
