--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.11
+  firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
+  firebase_storage: ^10.2.9
   flutter:
     sdk: flutter
-  firebase_core: ^1.13.1
-  firebase_auth: ^3.3.11
-  cloud_firestore: ^3.1.10
-  firebase_database: ^9.0.8
   image_picker: ^0.7.2
+  multi_image_picker2: ^5.0.2
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
