--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   image_picker: ^0.7.2
   multi_image_picker2: ^5.0.2
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
