--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   image_picker: ^0.7.2
   multi_image_picker2: ^5.0.2
   url_launcher: ^6.0.20
+  pdf: ^3.7.3
+  path_provider: ^2.0.9
+  printing: ^5.7.5
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
