--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
 
 dev_dependencies:
   flutter_native_splash: ^2.1.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
 flutter_native_splash:
   color: "#28c662"
